--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -28,36 +28,26 @@
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter" class="platform-android platform-cordova platform-webview">
-   <!--
-     The nav bar that will be updated as we navigate between views.
-   -->
-  <!-- <ion-nav-bar class="bar-stable">
-     <ion-nav-back-button>
-     </ion-nav-back-button>
-   </ion-nav-bar>-->
-   <!--
-     The views will be rendered in the <ion-nav-view> directive below
-     Templates are in the /templates folder (but you could also
-     have templates inline in this html file if you'd like).
-   -->
+    <!-- <ion-nav-view></ion-nav-view> -->
 
   <ion-side-menus>
-     <!-- Center content -->
-     <ion-side-menu-content>
-       <ion-header-bar class="bar-dark">
-         <h1 class="title">Meetnight</h1>
-       </ion-header-bar>
-       <ion-nav-view>
-       </ion-nav-view>
-     </ion-side-menu-content>
+    <!-- Center content -->
+    <ion-side-menu-content>
+      <ion-header-bar class="bar-dark" ng-show="logged">
+        <h1 class="title">Meetnight</h1>
+      </ion-header-bar>
+      <ion-nav-view></ion-nav-view>
+    </ion-side-menu-content>
 
-     <!-- Left menu -->
-     <ion-side-menu side="left">
-       <ion-header-bar class="bar-dark">
-         <h1 class="title">Projects</h1>
-       </ion-header-bar>
-     </ion-side-menu>
+    <!-- Left menu -->
+    <ion-side-menu side="left">
+      <ion-header-bar class="bar-dark">
+        <h1 class="title">Projects</h1>
+      </ion-header-bar>
+    </ion-side-menu>
   </ion-side-menus>
+
+  
 
  </body>
 </html>
