--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -36,19 +36,17 @@
     <!-- Center content -->
     <ion-side-menu-content>
       <ion-header-bar class="bar-dark" ng-show="logged">
-        <i ng-if="route == 'soirees'" class="ion-navicon"></i>
-        <i ng-if="route == 'create'" class="ion-ios-arrow-back" ng-click="goBack()"></i>
-        <h1 class="title">{{title}}</h1>
-        <i class="ion-ios-plus-outline" ng-click="create()"></i>
+        <span ng-if="route == 'soirees'" class="ion-navicon" ng-click="openSideMenu()"></span>
+        <span ng-if="route == 'create'" class="ion-ios-arrow-back" ng-click="goBack()"></span>
+        <!-- <h1 class="title">{{title}}</h1> -->
+        <span class="ion-ios-plus-outline" style="bakckground:red;" ng-click="create()"></span>
       </ion-header-bar>
       <ion-nav-view></ion-nav-view>
     </ion-side-menu-content>
 
     <!-- Left menu -->
     <ion-side-menu side="left">
-      <ion-header-bar class="bar-dark">
-        <h1 class="title">Projects</h1>
-      </ion-header-bar>
+      
     </ion-side-menu>
   </ion-side-menus>
 
