inte side menu done

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -45,7 +45,7 @@
 
     <!-- Left menu -->
     <ion-side-menu side="left">
-      <img src="http://a137.idata.over-blog.com/242x300/4/01/85/16/illustration-4/beau-mec-jared7-img.jpg" alt="">
+      <img ng-src="{{imgduprofil}}" alt="image du profil">
       <p class="name">Emmanuel</p>
       <ul class="dash-perso">
           <li>
@@ -53,22 +53,30 @@
                   <div class="number">5</div>
                   <p class="info">Soirée en cours</p>
               </div>
-          </li>
-          <li>
+          </li><!--
+          --><li>
               <div>
-                  <div class="number">11</div>
+                  <div class="number">2</div>
                   <p class="info">Invitations reçues</p>
               </div>
-          </li>
-          <li>
+          </li><!--
+          --><li>
               <div>
-                  <div class="number">0</div>
+                  <div class="number">10</div>
                   <p class="info">Soirées effectuées</p>
               </div>
           </li>
       </ul>
-      <div class="profil"></div>
-      <div class="logout"></div>
+      <div class="tabs-left-menu">
+          <div class="profil tab-left-menu">
+              <i class="ion-person"></i>
+              <p>Mon profil</p>
+          </div>
+          <div class="logout tab-left-menu">
+              <i class="ion-power"></i>
+              <p>Se deconnecter</p>
+          </div>
+      </div>
     </ion-side-menu>
   </ion-side-menus>
 
