--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
               <i class="ion-person"></i>
               <p>Mon profil</p>
           </div>
-          <div class="logout tab-left-menu">
+          <div class="logout tab-left-menu" ng-click="logOut()">
               <i class="ion-power"></i>
               <p>Se deconnecter</p>
           </div>
