debug inte chat

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -70,7 +70,7 @@
           </li>
       </ul>
       <div class="tabs-left-menu">
-          <div class="profil tab-left-menu">
+          <div class="profil tab-left-menu" ng-href="profil">
               <i class="ion-person"></i>
               <p>Mon profil</p>
           </div>
